# bettershi-api

./: .env  README.md  database.py  main.py  models.py  pyproject.toml  ruff.toml  schemas.py
functions/auth/: hashing.py  validations.py
